[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_backend"
version = "2026.02.05"
description = "Helper function and a context manager to switch between backends in a Jupyter notebook"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Germain Salvato Vallverdu"}
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.0",
    "ipython>=7.0",
]
keywords = ["matplotlib", "jupyter", "notebook", "backend", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/gvallver/mpl_backend"
Repository = "https://github.com/gvallver/mpl_backend"
Issues = "https://github.com/gvallver/mpl_backend/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mpl_backend*"]
exclude = ["tests*"]
